@@ -3,6 +3,8 @@ CHANGES - 2007-09-09
 
 CHANGES IN Mini-XML 2.3.1
 
+	- mxmlLoad*() did not return NULL when an element contained
+	  an error (STR #46)
 	- Added support for the apos character entity (STR #54)
 	- Fixed whitespace detection with Unicode characters (STR
 	  #48)
